policies/constraints/3-public-image.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: allow-only-internal-registries-new-oo
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    # Optional: Exclude system namespaces if needed
    namespaces:
      - "test"
      - "default"
    excludedNamespaces: []
      # - "kube-system"      # Example: Policy will ignore this
      # - "gatekeeper-system" # Example: Policy will ignore this
      # - "config-management-system"
  parameters:
    repos:
      # Replace with your specific Google Artifact Registry or GCR paths
      - "gcr.io/your-project-id/"
      - "us-central1-docker.pkg.dev/your-project-id/"
