policies/constraints/5-prevent-Privileged.yaml
##Constraint: Disallow Privileged Containers (k8spspprivilegedcontainer)
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: psp-privileged-container
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "default"
      - "test"
    excludedNamespaces: ["kube-system", "gatekeeper-system"]
---
# ## Constraint: Disallow HostPath Volumes (k8spsphostfilesystem)
# apiVersion: constraints.gatekeeper.sh/v1beta1
# kind: K8sPSPHostFileSystem
# metadata:
#   name: psp-hostfilesystem
# spec:
#   enforcementAction: deny
#   match:
#     kinds:
#       - apiGroups: [""]
#         kinds: ["Pod"]
#     namespaces:
#       - "default"
#       - "test"
#     excludedNamespaces: ["kube-system", "gatekeeper-system"]
#   parameters:
#     readOnly: false
# ---
## Constraint: Require Running as Non-Root (k8spssrunasnonroot)
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSSRunAsNonRoot
metadata:
  name: pss-runasnonroot
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "default"
      - "test"
    excludedNamespaces: ["kube-system", "gatekeeper-system"]
