policies/constraints/6-ban-latest-tag.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedTags
metadata:
  name: ban-latest-image-tags
spec:
  enforcementAction: deny
  match:
    namespaces:
      - "test"
      - "default"
    excludedNamespaces: []
      # - "kube-system"      # Example: Policy will ignore this
      # - "gatekeeper-system" # Example: Policy will ignore this
      # - "config-management-system"
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet", "ReplicaSet", "Job", "CronJob"]
  parameters:
    tags: ["latest"]
# apiVersion: constraints.gatekeeper.sh/v1beta1
# kind: K8sDisallowedTags
# metadata:
#   name: container-image-must-not-have-latest-tag
# spec:
#   match:
#     enforcementAction: deny
#     kinds:
#       - apiGroups: [""]
#         kinds: ["Pod"]
#     namespaces:
#       - "default"
#   parameters:
#     tags: ["latest"]
#     exemptImages: ["openpolicyagent/opa-exp:latest", "openpolicyagent/opa-exp2:latest"]
