policies/constraints/8-network-policies.yaml
##  Enforce Network Policies
## Policy: Requires every new Namespace to contain a default "deny-all" NetworkPolicy object.
## Why: Kubernetes networking is "open" by default. This policy ensures a "zero-trust" security posture from the creation of a new environment.

apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireNamespaceNetworkPolicies
metadata:
  name: require-any-networkpolicy-for-pods
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    # Apply to all namespaces except system ones
    excludedNamespaces: ["kube-system", "gatekeeper-system", "gke-managed-cim", "gke-connect"]
